--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ html, body {
     padding: 0;
     margin: 0;
     height: 100%;
-    min-width: 228px;
+    min-width: 360px;
 }
 
 .container {
@@ -17,12 +17,18 @@ html, body {
     padding: 20px;
 }
 
+.pane {
+    display: flex;
+    flex-flow: column;
+    flex-grow: 1;
+    align-items: center;
+}
+
 .preview {
     height: 100%;
     overflow: auto;
-    border: 4px dashed gray;
-    max-width: 392px;
-    margin-left: 20px;
+    max-width: 384px;
+    box-shadow: 2px 2px 20px rgba(0,0,0,.3);
 }
 
 .preview::-webkit-scrollbar {
@@ -50,19 +56,11 @@ html, body {
 }
 
 #previewHeight {
-    background: rgba(255, 0, 0, 0.8);
+    background: rgba(255,0,0,.8);
 }
 
 #previewCursor {
-    background: rgba(255, 0, 0, 0.3);
-}
-
-.controls {
-    flex-grow: 2;
-}
-
-.fill {
-    flex-grow: 1;
+    background: rgba(255,0,0,.3);
 }
 
 .row {
@@ -84,7 +82,7 @@ html, body {
     padding: 10px;
     opacity: 0.8;
     color: #fff;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 10px rgba(0,0,0,.2);
 }
 
 .blue {
@@ -127,7 +125,8 @@ html, body {
 }
 
 #sizeBox,
-#marginBox {
+#marginBox,
+#brushBox {
     width: 60px;
 }
 
@@ -163,7 +162,7 @@ html, body {
     .preview {
         height: auto;
         margin-left: 0;
-        margin-bottom: 20px;
+        margin: 20px 0;
     }
 
     #previewWrap {
@@ -178,4 +177,28 @@ html, body {
 
 .draw {
     cursor: crosshair;
+}
+
+.section {
+    box-shadow: 2px 2px 10px rgba(0,0,0,.3);
+    margin-bottom: 8px;
+}
+
+.section-content {
+    display: none;
+    padding: 16px;
+}
+
+.section.expanded > .section-content {
+    display: block;
+}
+
+.controls {
+    width: 100%;
+    max-width: 420px;
+}
+
+#printBtn,
+#clearBtn {
+    flex-grow: 1;
 }
